server client chat multi thread first push

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /codeInitialpropose/ClientTCP/nbproject/private/
 /codeInitialpropose/ServerTCP/nbproject/private/
+/codeInitialpropose/ServerTCP/build/
+/codeInitialpropose/ClientTCP/build/
+/codeInitialpropose/ServerTCP/dist/
+/codeInitialpropose/ClientTCP/dist/
